--- a/resources/metadata/cloudFoundryCreateServiceKey.yaml
+++ b/resources/metadata/cloudFoundryCreateServiceKey.yaml
@@ -28,8 +28,12 @@ spec:
         - PARAMETERS
         - STAGES
         - STEPS
-        secret: true
         mandatory: true
+        secret: true
+        resourceRef:
+          - name: cfCredentialsId
+            type: secret
+            param: username
       - name: password
         type: string
         description: User Password for CF User
@@ -39,6 +43,10 @@ spec:
         - STEPS
         mandatory: true
         secret: true
+        resourceRef:
+          - name: cfCredentialsId
+            type: secret
+            param: password
       - name: cfOrg
         type: string
         description: CF org
