Trying to fix docu generation

--- a/resources/com.sap.piper/pipeline/cloudSdkStageDefaults.yml
+++ b/resources/com.sap.piper/pipeline/cloudSdkStageDefaults.yml
@@ -1,5 +1,5 @@
 stages:
-  staticCodeChecks:
+  mavenStaticCodeChecks:
     stepConditions:
       mavenExecuteStaticCodeChecks:
         filePattern: 'pom.xml'
