Extend conditions for step and stage activation (#1955)
Co-authored-by: Stephan Aßmus <stephan.assmus@sap.com>

--- a/resources/com.sap.piper/pipeline/cloudSdkStageDefaults.yml
+++ b/resources/com.sap.piper/pipeline/cloudSdkStageDefaults.yml
@@ -48,7 +48,10 @@ stages:
   backendIntegrationTests:
     stepConditions:
       npmExecuteScripts:
-        configKeys:
-          - 'runScripts'
+        npmScripts: 'ci-it-backend'
       mavenExecuteIntegration:
         filePattern: 'integration-tests/pom.xml'
+  frontendIntegrationTests:
+    stepConditions:
+      npmExecuteScripts:
+        npmScripts: 'ci-it-frontend'
