--- a/resources/metadata/cloudFoundryDeleteService.yaml
+++ b/resources/metadata/cloudFoundryDeleteService.yaml
@@ -14,10 +14,10 @@ spec:
         type: string
         description: Cloud Foundry API endpoint
         scope:
-        - PARAMETERS
-        - STAGES
-        - STEPS
-        - GENERAL
+          - PARAMETERS
+          - STAGES
+          - STEPS
+          - GENERAL
         mandatory: true
         aliases:
           - name: cloudFoundry/apiEndpoint
@@ -25,28 +25,28 @@ spec:
         type: string
         description: User or E-Mail for CF
         scope:
-        - PARAMETERS
-        - STAGES
-        - STEPS
+          - PARAMETERS
+          - STAGES
+          - STEPS
         mandatory: true
         secret: true
       - name: password
         type: string
         description: User Password for CF User
         scope:
-        - PARAMETERS
-        - STAGES
-        - STEPS
+          - PARAMETERS
+          - STAGES
+          - STEPS
         mandatory: true
         secret: true
       - name: cfOrg
         type: string
         description: CF org
         scope:
-        - PARAMETERS
-        - STAGES
-        - STEPS
-        - GENERAL
+          - PARAMETERS
+          - STAGES
+          - STEPS
+          - GENERAL
         mandatory: true
         aliases:
           - name: cloudFoundry/org
@@ -54,10 +54,10 @@ spec:
         type: string
         description: CF Space
         scope:
-        - PARAMETERS
-        - STAGES
-        - STEPS
-        - GENERAL
+          - PARAMETERS
+          - STAGES
+          - STEPS
+          - GENERAL
         mandatory: true
         aliases:
           - name: cloudFoundry/space
@@ -65,10 +65,10 @@ spec:
         type: string
         description: Parameter of ServiceInstance Name to delete CloudFoundry Service
         scope:
-        - PARAMETERS
-        - STAGES
-        - STEPS
-        - GENERAL
+          - PARAMETERS
+          - STAGES
+          - STEPS
+          - GENERAL
         mandatory: true
         aliases:
           - name: cloudFoundry/serviceInstance
@@ -76,14 +76,14 @@ spec:
         type: bool
         description: Parameter to force deletion of Cloud Foundry Service Keys
         scope:
-        - PARAMETERS
-        - STAGES
-        - STEPS
+          - PARAMETERS
+          - STAGES
+          - STEPS
         mandatory: false
         aliases:
           - name: cloudFoundry/cfDeleteServiceKeys
   containers:
     - name: cf
       image: ppiper/cf-cli
-      workingDir: '/home/piper'
+      workingDir: "/home/piper"
       imagePullPolicy: Never
