--- a/resources/metadata/karma.yaml
+++ b/resources/metadata/karma.yaml
@@ -72,7 +72,7 @@ spec:
         - mountPath: /dev/shm
           name: dev-shm
       env:
-        - name: 'NO_PROXY'
-          value: 'localhost,karma,$NO_PROXY'
-        - name: 'no_proxy'
-          value: 'localhost,selenium,$no_proxy'
+        - name: "NO_PROXY"
+          value: "localhost,karma,$NO_PROXY"
+        - name: "no_proxy"
+          value: "localhost,selenium,$no_proxy"
