--- a/resources/metadata/abapAddonAssemblyKitPublishTargetVector.yaml
+++ b/resources/metadata/abapAddonAssemblyKitPublishTargetVector.yaml
@@ -1,18 +1,19 @@
 metadata:
     name: abapAddonAssemblyKitPublishTargetVector
-    description: TODO
+    description: This step triggers the publication of the Target Vector to the Service Provider Cockpit system, specified by the Scope. 
     longDescription: |
-        TODO    
+      This step reads the Target Vector ID from the addonDescriptor in the commonPipelineEnvironment and triggers the publication of the Target Vector to the Service Provider Cockpit system.
+      With scopeTV "T" the Target Vector will be published to the test SPC and with scopeTV "P" it will be published to public SPC.   
 spec:
   inputs:
     secrets:
       - name: abapAddonAssemblyKitCredentialsId
-        description: Credential for AbapAddonAssemblyKit System
+        description: Credential stored in Jenkins for Addon Assembly Kit as a Service System (AAKaaS)
         type: jenkins
     params:
       - name: abapAddonAssemblyKitEndpoint
         type: string
-        description: TODO
+        description: Base URL to the Addon Assembly Kit as a Service System (AAKaaS)
         scope:
         - PARAMETERS
         - STAGES
@@ -21,7 +22,7 @@ spec:
         mandatory: true
       - name: username
         type: string
-        description: User
+        description: User for the Addon Assembly Kit as a Service System (AAKaaS)
         scope: 
         - PARAMETERS
         - STAGES
@@ -30,7 +31,7 @@ spec:
         secret: true
       - name: password
         type: string
-        description: User Password
+        description: Password the Addon Assembly Kit as a Service System (AAKaaS)
         scope:
         - PARAMETERS
         - STAGES
@@ -39,7 +40,7 @@ spec:
         secret: true
       - name: scopeTV
         type: string
-        description: TODO
+        description: Determines whether the Target Vector is published to the public SPC('P') or the test SPC('T')
         possibleValues:
           - T
           - P
@@ -49,7 +50,7 @@ spec:
           - STEPS
       - name: addonDescriptor
         type: string
-        description: AddonDescriptor
+        description: File name of the YAML file which describes the Product Version and corresponding Software Component Versions
         mandatory: true
         scope:
           - PARAMETERS
