--- a/resources/metadata/abapAddonAssemblyKitReserveNextPackages.yaml
+++ b/resources/metadata/abapAddonAssemblyKitReserveNextPackages.yaml
@@ -1,18 +1,24 @@
 metadata:
     name: abapAddonAssemblyKitReserveNextPackages
-    description: TODO
+    description: This step determines the ABAP delivery packages (name and type), which are needed to deliver Software Component Versions. 
     longDescription: |
-        TODO    
+      This step takes the list of Software Component Versions from the addonDescriptor in the commonPipelineEnvironment and determines the ABAP delivery packages 
+      If a package does not exist yet in the package registry, it is created there. The response contains detail information for this package and a package status, which determines the next actions:
+      "P": Package was created in the registry; production can be started / continued
+      "R": Package exists and is already released; production is not needed and must be skipped
+      The steps waits until the status "P" or "R" is achieved.
+      The name, type and namespace of each package is written back to the addonDescriptor in the commonPipelineEnvironment.
+          
 spec:
   inputs:
     secrets:
       - name: abapAddonAssemblyKitCredentialsId
-        description: Credential for AbapAddonAssemblyKit System
+        description: Credential stored in Jenkins for Addon Assembly Kit as a Service System (AAKaaS)
         type: jenkins
     params:
       - name: abapAddonAssemblyKitEndpoint
         type: string
-        description: TODO
+        description: Base URL to the Addon Assembly Kit as a Service System (AAKaaS)
         scope:
         - PARAMETERS
         - STAGES
@@ -21,7 +27,7 @@ spec:
         mandatory: true
       - name: username
         type: string
-        description: User
+        description: User for the Addon Assembly Kit as a Service System (AAKaaS)
         scope: 
         - PARAMETERS
         - STAGES
@@ -30,7 +36,7 @@ spec:
         secret: true
       - name: password
         type: string
-        description: User Password
+        description: Password the Addon Assembly Kit as a Service System (AAKaaS)
         scope:
         - PARAMETERS
         - STAGES
@@ -39,7 +45,7 @@ spec:
         secret: true
       - name: addonDescriptor
         type: string
-        description: AddonDescriptor
+        description: Structure in the commonPipelineEnvironment containing information about the Product Version and corresponding Software Component Versions
         mandatory: true
         scope:
           - PARAMETERS
