deploy fiori app to abap frontend server

--- a/resources/default_pipeline_environment.yml
+++ b/resources/default_pipeline_environment.yml
@@ -24,6 +24,18 @@ general:
         envVars: {}
         pullImage: true
     cts:
+      osDeployUser: 'node'
+      deployToolDependencies:
+        - '@ui5/cli'
+        - '@sap/ux-ui5-tooling'
+        - '@ui5/logger'
+        - '@ui5/fs'
+      deployConfigFile: 'ui5-deploy.yaml'
+      nodeDocker:
+        image: 'node'
+        options: []
+        envVars: {}
+        pullImage: true
       docker:
         image: 'ppiper/cm-client'
         options: []
