support credentials for docker pull

--- a/resources/default_pipeline_environment.yml
+++ b/resources/default_pipeline_environment.yml
@@ -206,6 +206,7 @@ steps:
   debugReportArchive:
     shareConfidentialInformation: false
   dockerExecute:
+    dockerRegistry: ''
     dockerPullImage: true
     sidecarPullImage: true
     stashContent: []
