--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -66,6 +66,11 @@ jobs:
         mkdir -p documentation/docs-gen/misc
         cp target/docuMetaData.json documentation/docs-gen/misc
 
+    - uses: actions/upload-artifact@v2
+      with:
+        name: docs-gen
+        path: documentation/docs-gen
+
     - name: Deploy
       if: github.ref == 'refs/heads/master'
       uses: peaceiris/actions-gh-pages@v3
