Fix runStep condition for mavenExecuteStaticCodeChecks
This change fixes the runStep condition for the step
mavenExecuteStaticCodeChecks in Cloud SDK Pipeline. Previously, the
step was executed even when both supported tools, i.e., PMD and SpotBugs
were disabled.

--- a/resources/com.sap.piper/pipeline/cloudSdkStageDefaults.yml
+++ b/resources/com.sap.piper/pipeline/cloudSdkStageDefaults.yml
@@ -2,7 +2,11 @@ stages:
   build:
     stepConditions:
       mavenExecuteStaticCodeChecks:
-        filePattern: 'pom.xml'
+        config:
+          pmd:
+            - true
+          spotBugs:
+            - true
       npmExecuteLint:
         filePattern:
           - '**/*.js'
