test to fix conditions

--- a/resources/com.sap.piper/pipeline/cloudSdkStageDefaults.yml
+++ b/resources/com.sap.piper/pipeline/cloudSdkStageDefaults.yml
@@ -5,8 +5,13 @@ stages:
         config:
           pmd:
             - true
+            - 'maxAllowedViolations'
+            - 'failurePriority'
           spotBugs:
             - true
+            - 'excludeFilterFile'
+            - 'includeFilterFile'
+            - 'maxAllowedViolations'
       npmExecuteLint:
         filePattern:
           - '**/*.js'
