add step for GitHub branch protection check

--- a/resources/metadata/githubrelease.yaml
+++ b/resources/metadata/githubrelease.yaml
@@ -79,7 +79,7 @@ spec:
       - name: owner
         aliases:
           - name: githubOrg
-        description: "Set the GitHub organization."
+        description: Name of the GitHub organization.
         resourceRef:
           - name: commonPipelineEnvironment
             param: github/owner
@@ -107,7 +107,7 @@ spec:
       - name: repository
         aliases:
           - name: githubRepo
-        description: "Set the GitHub repository."
+        description: Name of the GitHub repository.
         resourceRef:
           - name: commonPipelineEnvironment
             param: github/repository
