Rename frontendUnitTests to additionalUnitTests stage

--- a/resources/com.sap.piper/pipeline/cloudSdkStageDefaults.yml
+++ b/resources/com.sap.piper/pipeline/cloudSdkStageDefaults.yml
@@ -29,7 +29,7 @@ stages:
       npmExecuteScripts:
         npmScripts:
           - 'ci-it-frontend'
-  frontendUnitTests:
+  additionalUnitTests:
     stepConditions:
       npmExecuteScripts:
         npmScripts:
