Add pom.xml filePattern condition again

--- a/resources/com.sap.piper/pipeline/cloudSdkStageDefaults.yml
+++ b/resources/com.sap.piper/pipeline/cloudSdkStageDefaults.yml
@@ -2,6 +2,7 @@ stages:
   build:
     stepConditions:
       mavenExecuteStaticCodeChecks:
+        filePattern: 'pom.xml'
         config:
           pmd:
             - true
