Add step for GitHub branch protection check (#2010)
* add step for GitHub branch protection check

* add command to piper command

* remove unnecessary parameter

* Update resources/metadata/githubbranchprotection.yaml

* add groovy part

* update generation & go mod tidy

* update groovy tests

* fix bug with go-github version

Co-authored-by: Sven Merk <33895725+nevskrem@users.noreply.github.com>

--- a/resources/metadata/githubcreatepr.yaml
+++ b/resources/metadata/githubcreatepr.yaml
@@ -58,7 +58,7 @@ spec:
       - name: owner
         aliases:
           - name: githubOrg
-        description: Set the GitHub organization.
+        description: Name of the GitHub organization.
         scope:
           - PARAMETERS
           - STAGES
@@ -68,7 +68,7 @@ spec:
       - name: repository
         aliases:
           - name: githubRepo
-        description: Set the GitHub repository.
+        description: Name of the GitHub repository.
         scope:
           - PARAMETERS
           - STAGES
