Revert "Add step for GitHub branch protection check (#2010)"
This reverts commit f1cfca2e7660ecfe3d53f55a619e6256ad48c416.

--- a/resources/metadata/githubcreatepr.yaml
+++ b/resources/metadata/githubcreatepr.yaml
@@ -58,7 +58,7 @@ spec:
       - name: owner
         aliases:
           - name: githubOrg
-        description: Name of the GitHub organization.
+        description: Set the GitHub organization.
         scope:
           - PARAMETERS
           - STAGES
@@ -68,7 +68,7 @@ spec:
       - name: repository
         aliases:
           - name: githubRepo
-        description: Name of the GitHub repository.
+        description: Set the GitHub repository.
         scope:
           - PARAMETERS
           - STAGES
